<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activity.SMT_Working_Information"
    >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/text_border_title"
        android:gravity="center_vertical"
        android:text="@string/smt_work_information"
        android:textColor="#FFFF"
        android:textSize="35sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvInformation"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/text_border_subtitle"
                android:gravity="center_vertical"
                android:text="@string/work_information"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/text_border_light_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorker"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:background="@drawable/text_border_blue"
                    android:gravity="center"
                    android:text="@string/worker"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/etWorker"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_light_blue"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:singleLine="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/text_border_light_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLotNo"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_blue"
                    android:gravity="center"
                    android:text="@string/lot_no"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/etLotNo"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_light_blue"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/text_border_light_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvWorkMode"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_blue"
                    android:gravity="center"
                    android:text="@string/work_mode"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/etWorkMode"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_light_blue"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:singleLine="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="@drawable/text_border_light_blue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvPartNo"
                    android:layout_width="120dp"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_blue"
                    android:gravity="center"
                    android:text="@string/part_no"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/etPartNo"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:background="@drawable/text_border_light_blue"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="17sp"
                    android:singleLine="true"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tvFeederInformation"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/text_border_subtitle"
                android:gravity="center_vertical"
                android:text="Dipping Feeder Check"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tlFeeder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_border_blue"
                android:stretchColumns='*'>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="No"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Feeder No."
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="용도"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="확인"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <TextView
                android:id="@+id/tvPartHistory"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/text_border_subtitle"
                android:gravity="center_vertical"
                android:text="자재투입 내역(실사용 : 사용+Loss)"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/tlList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/text_border_blue"
                android:stretchColumns='*'>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="No"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Part No."
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Lot No."
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="초기재고"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="실사용"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnMaterialUse"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="자재투입"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnMaterialChange"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:text="자재교환"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnWorkEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="작업종료"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
    </LinearLayout>
</LinearLayout>


